# windlink

./: README.md
analyzer/: Cargo.toml
analyzer/src/: main.rs
embedded/: .gitignore  Cargo.toml  sdkconfig.defaults
embedded/application/: Cargo.toml  build.sh  sdkconfig.defaults
embedded/application/.cargo/: config.toml
embedded/application/src/: app.rs  ble.rs  can.rs  main.rs  util.rs  wifi.rs
embedded/application/web/: index.html
embedded/src/: app.rs  ble.rs  can.rs  indicator.rs  main.rs  util.rs  wifi.rs
embedded/updater/: Cargo.toml  build.sh  sdkconfig.defaults
embedded/updater/src/: main.rs
embedded/updater/web/: index.html
embedded/web/: flash-success.html  index.html
embedded_update/: Cargo.toml
embeded_update/: partitions.csv
embeded_update/.cargo/: config.toml
embeded_update/src/: main.rs
embeded_update/web/: index.html
garmin/: manifest.xml
garmin/resources/: resources.xml
garmin/source/: App.mc  Boat.mc  ConnectingView.mc  Const.mc  WindView.mc
hardware/: .gitignore  README.md  case.FCStd  windlink.kicad_pcb  windlink.kicad_pro  windlink.kicad_sch
nmea2000/: Cargo.toml
nmea2000/examples/: decode.rs
nmea2000/src/: header.rs  lib.rs  util.rs
nmea2000/src/packets/: fast.rs  handshake.rs  mod.rs  motion.rs  proprietary.rs
