[package]
name = "application"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
nmea2000 = { path = "../../nmea2000" }

anyhow = "1.0.102"
clone-macro = "1.0.0"
esp-idf-hal = "0.46.2"
esp-idf-svc = "0.52"
log = "0.4"
uuid = "1.23.0"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.8.2" }

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }
