[package]
name = "updater"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
esp-idf-hal = "0.46.2"
esp-idf-svc = "0.52"
log = "0.4"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.8.2" }

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
